<resources>
    <string name="app_name">TrainingAssistant</string>
    <string name="client_activity_label">Client</string>
    <string name="session_activity_label">Session</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Training Assistant</string>
    <string name="nav_header_subtitle">Schedule &amp; Track Training Sessions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_format">d MMM, yyyy</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_clients">Clients</string>
    <string name="txt_session_item_name">Session Client Name</string>
    <string name="txt_session_item_time">12:00 pm (time)</string>
    <string name="txt_session_client_name">Session Client Name</string>
    <string name="txt_session_daytime">Session Daytime</string>
    <string name="txt_session_duration">Session Duration</string>
    <string name="session_duration">%1$s mins</string>
    <string name="etxt_notes_hint">Session Notes</string>
    <string name="txt_session_exercise_details">Exercise Details</string>
    <string name="txt_session_exercise_comments">Exercise Details</string>
    <string name="txt_client_item_name">Client Name</string>
    <string name="txt_client_item_is_active">Is Client Active?</string>
    <string name="txt_client_item_schedule_type">Schedule Type</string>
    <string name="is_client_active">Active: %1$s</string>
    <string name="client_schedule_type">Schedule Type: %1$s</string>
    <string name="txt_client_start_date">Start Date: %1$s</string>
    <string name="txt_client_end_date">End Date: %1$s</string>
    <string name="txt_client_banked_session">Banked Sessions: %1$s</string>
    <string name="lbl_client_schedule_header">Schedule</string>
    <string name="lbl_client_details_header">Details</string>
    <string name="lbl_client_sessions_header">Sessions</string>
    <string name="fab_edit_client_desc">Generic edit icon</string>

    <string name="lbl_edit_client_name">Client Name</string>
    <string name="lbl_edit_client_banked_sessions">Banked Sessions</string>
    <string name="lbl_edit_client_start_date">Start Date</string>
    <string name="lbl_edit_client_end_date">End Date</string>
</resources>