<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/session"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.session.SessionFragment">

    <TextView
        android:id="@+id/txtSessionClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_session_client_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSessionDayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_session_daytime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSessionClientName" />

    <TextView
        android:id="@+id/txtSessionDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/txt_session_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSessionDayTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSessionExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtSessionDuration"
        app:layout_constraintBottom_toTopOf="@id/etxtNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/exercise_session_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <EditText
        android:id="@+id/etxtNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etxt_notes_hint"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/prgSessionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/fab_edit_client_desc"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>