<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.client.ClientFragment">

    <TextView
        android:id="@+id/txtClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Client Name"
        android:layout_marginTop="@dimen/generic_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/title_text_size"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clClientInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/generic_padding"
        app:layout_constraintTop_toBottomOf="@id/txtClientName">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/txtClientDetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client_details_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/header_text_size" />

        <TextView
            android:id="@+id/txtClientStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Start Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtClientDetailsHeader"
            app:layout_constraintEnd_toStartOf="@id/glClient"/>

        <TextView
            android:id="@+id/txtClientEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="End Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtClientStartDate"
            app:layout_constraintEnd_toStartOf="@id/glClient" />

        <TextView
            android:id="@+id/txtClientBankedSessions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Banked Sessions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtClientEndDate"
            app:layout_constraintEnd_toStartOf="@id/glClient" />

        <TextView
            android:id="@+id/lblClientScheduleTypeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_client_schedule_header"
            app:layout_constraintStart_toEndOf="@id/glClient"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/header_text_size"/>

        <TextView
            android:id="@+id/txtClientScheduleType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Schedule Type"
            app:layout_constraintStart_toEndOf="@id/glClient"
            app:layout_constraintTop_toBottomOf="@id/lblClientScheduleTypeHeader"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtClientScheduleDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Schedule Details"
            app:layout_constraintStart_toEndOf="@id/glClient"
            app:layout_constraintTop_toBottomOf="@id/txtClientScheduleType"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lblClientSessionsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_client_sessions_header"
        android:layout_marginTop="@dimen/generic_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clClientInfo"
        android:textSize="@dimen/header_text_size"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClientSessions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/lblClientSessionsHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/client_session_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/fab_edit_client_desc"
        android:src="@android:drawable/ic_menu_edit"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>